# EcoNest-Capstone

./: .dockerignore  AGENTS.md  Dockerfile  README.md  arcade_schema.sql  backend.py  data_format.txt  database_schema.txt  docker-compose.yml  energy_sound_logger.py  logger.py  pyproject.toml  sound_logger.py  sound_test.py  test_mic.py
Documentation/CDR/: CDR Presentation (1).pptx  Senior_Design_CDR_.docx
Documentation/Proposal/: Project Proposal.docx
Freeware Software/: s.xlsx
Machine_learning/: requirements.txt  updated_backend.py
Machine_learning/archives/: homecontext.py  seed_device_profiles.py  test_inference.py
Machine_learning/scripts/: README.md  analytics.py  conn_check.py  demo.py  inference.py  trigger.py
homeassistant/: autoclosedouble_automation.yaml  autoclosesingle_automation.yaml  cc_configuration.yaml  lights_configuration.yaml  security_configuration.yaml  securityalert_automation.yaml  soundmotionspike_automation.yaml  vegetablebeds_autowatering_automation.yaml
medium home/backend/: backend.py
medium home/frontend/: frontend.py
medium home/homeassistant/: automations.yaml  configuration.yaml
medium home/sensors/: energy_test.py  log_energy.py
medium home/tests/: read_all_devices.py
orchestrator/: config.py  main.py
orchestrator/agents/: base.py  device_agent.py  energy_agent.py  orchestrator.py  security_agent.py  sensor_agent.py
orchestrator/api/: auth.py  devices.py  graph.py  mcp.py  ontology.py  users.py
orchestrator/core/: database.py  permissions.py  security.py
orchestrator/graph/: builder.py  models.py  queries.py  seeds.py
orchestrator/llm/: client.py  memory.py
orchestrator/mcp/: server.py
orchestrator/mcp/tools/: db_tools.py  (+3 more)
orchestrator/ontology/: loader.py  reasoner.py  smart_home.ttl  validator.py
orchestrator/tests/: conftest.py  test_agents.py  test_auth.py  test_graph.py  test_mcp.py  test_ontology.py
scripts/: migrate_add_users.sql
